--- a/pods.yml
+++ b/pods.yml
@@ -7,6 +7,6 @@ metadata:
 spec:
   containers:
     - name: nodeapp
-      image: kammana/nodeapp:v1
+      image: zag2020/nodeapp:tagVersion
       ports:
         - containerPort: 8080
